Header kısmını tamamladım
Header içerisindeki banner, banner textler ve banner altındaki menüyü yaptım.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 
   <head>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&family=Chelsea+Market&family=Poller+One&family=Roboto+Condensed:wght@400;700&family=Roboto+Mono:wght@400;700&family=Satisfy&display=swap" rel="stylesheet">
+
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="reset.css">
     <link rel="icon" type="image/svg+xml" href="./workintech.svg" />
     <link rel="stylesheet" href="./style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,17 +13,38 @@
   </head>
 
   <body>
-    <div id="app">
-      <div>
-        <a href="https://github.com/Workintech/fsweb-s5-bonus-challenge-html-pizza" target="_blank">
-          <img src="./workintech.svg" class="logo" alt="Workintech logo">
-        </a>
-        <h1>Hello Coder!</h1>
-        <p class="read-the-docs">
-          Click on the Workintech logo to see the Readme of the project
-        </p>
+    <header>
+      <div class="banner">
+        <img src="public/assets/iteration-1/home-banner.png" alt="">
+        <div class="banner-text">
+          <div class="logo"><img src="public/assets/iteration-1/logo.svg" alt=""></div>
+          <div class="slogan-small">fırsatı kaçırma</div>
+          <div class="slogan-main">KOD ACIKTIRIR</div>
+          <div class="slogan-main2">PİZZA, DOYURUR</div>
+          <div class="buton"><p>ACIKTIM</p></div>
+        </div>
       </div>
-    </div>
+      <div>
+        <div class="menu">
+          <nav class="icons">
+            <a href=""><img src="public/assets/iteration-2/icons/1.svg" alt="">YENİ! Kore</a>
+            <a href=""><img src="public/assets/iteration-2/icons/2.svg" alt="">Pizza</a>
+            <a href=""><img src="public/assets/iteration-2/icons/3.svg" alt="">Burger</a>
+            <a href=""><img src="public/assets/iteration-2/icons/4.svg" alt="">Kızartmalar</a>
+            <a href=""><img src="public/assets/iteration-2/icons/5.svg" alt="">Fast Food</a>
+            <a href=""><img src="public/assets/iteration-2/icons/6.svg" alt="">Gazlı İçecek</a>
+          </nav>
+        </div>
+        </nav>
+
+      </div>
+    </header>
+
+    <section>
+      <div>
+        <img src="" alt="">
+      </div>
+    </section>
   </body>
 
 </html>
