--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 
   <head>
-    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&family=Chelsea+Market&family=Poller+One&family=Roboto+Condensed:wght@400;700&family=Roboto+Mono:wght@400;700&family=Satisfy&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Chelsea+Market&family=Poller+One&family=Quattrocento:wght@400;700&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Satisfy&display=swap" rel="stylesheet">
 
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="reset.css">
@@ -26,7 +28,7 @@
       </div>
       <div>
         <div class="menu">
-          <nav class="icons">
+          <nav class="icons"> 
             <a href=""><img src="public/assets/iteration-2/icons/1.svg" alt="">YENİ! Kore</a>
             <a href=""><img src="public/assets/iteration-2/icons/2.svg" alt="">Pizza</a>
             <a href=""><img src="public/assets/iteration-2/icons/3.svg" alt="">Burger</a>
@@ -39,10 +41,26 @@
 
       </div>
     </header>
-
-    <section>
-      <div>
-        <img src="" alt="">
+    <section class="card">
+      <div class="left-card">
+        <img class="card1" src="public/assets/iteration-2/cta/kart-1.png" alt="">
+        <div class="left-card-text">
+          <p>Özel Lezzetus</p>
+          <button>SİPARİŞ VER</button>
+        </div>
+      </div>
+      <div class="right-card">
+          <img class="card2" src="public/assets/iteration-2/cta/kart-2.png" alt="">
+          <div class="right-card-top">  
+            <p>Hackathlon Burger Menü</p>
+            <button>SİPARİŞ VER</button>
+          </div>
+          <img class="card3" src="public/assets/iteration-2/cta/kart-3.png" alt="">
+          <div class="right-card-bot">
+            <p><span>Çooook</span> hızlı npm gibi kurye</p>
+            <button>SİPARİŞ VER</button>
+          </div>
+        </div>
       </div>
     </section>
   </body>
