--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
           <div class="buton"><p>ACIKTIM</p></div>
         </div>
       </div>
-      <div>
         <div class="menu">
           <nav class="icons"> 
             <a href=""><img src="public/assets/iteration-2/icons/1.svg" alt="">YENİ! Kore</a>
@@ -37,9 +36,6 @@
             <a href=""><img src="public/assets/iteration-2/icons/6.svg" alt="">Gazlı İçecek</a>
           </nav>
         </div>
-        </nav>
-
-      </div>
     </header>
     <section class="card">
       <div class="left-card">
@@ -61,6 +57,34 @@
             <button>SİPARİŞ VER</button>
           </div>
         </div>
+      </div>
+    </section>
+    <section class="menu-slogan">
+      <div class="slogan">
+        <p><span>en çok paketlenen menüler</span></p>
+        <p>Acıktıran Kodlara Doyuran Lezzetler</p>
+      </div>
+    </section>
+    <section class="pizza-menu">
+        <nav>
+          <a href=""><img src="public/assets/iteration-2/icons/1.svg" alt="">Ramen</a>
+          <a class="pizza"><img src="public/assets/iteration-2/icons/2.svg" alt="">Pizza</a>
+          <a href=""><img src="public/assets/iteration-2/icons/3.svg" alt="">Burger</a>
+          <a href=""><img src="public/assets/iteration-2/icons/4.svg" alt="">French Fries</a>
+          <a href=""><img src="public/assets/iteration-2/icons/5.svg" alt="">Fast Food</a>
+          <a href=""><img src="public/assets/iteration-2/icons/6.svg" alt="">Soft Drinks</a>
+        </nav>
+      </div>
+      <div class="pizza-card">
+        <div class="pizza-card1"><img src="public/assets/iteration-2/pictures/food-1.png" alt="">
+        <div class="terminal-text">
+          <p>Terminal Pizza</p>
+          <p>4.9 (200)</p>
+          <p>60₺</p>
+        </div>
+      </div>
+        <div class="pizza-card2"><img src="public/assets/iteration-2/pictures/food-2.png" alt=""></div>
+        <div class="pizza-card3"><img src="public/assets/iteration-2/pictures/food-3.png" alt=""></div>
       </div>
     </section>
   </body>
