--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Chelsea+Market&family=Poller+One&family=Quattrocento:wght@400;700&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Satisfy&display=swap" rel="stylesheet">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="reset.css">
     <link rel="icon" type="image/svg+xml" href="./workintech.svg" />
     <link rel="stylesheet" href="./style.css">
@@ -20,10 +21,11 @@
         <img src="public/assets/iteration-1/home-banner.png" alt="">
         <div class="banner-text">
           <div class="logo"><img src="public/assets/iteration-1/logo.svg" alt=""></div>
-          <div class="slogan-small">fırsatı kaçırma</div>
-          <div class="slogan-main">KOD ACIKTIRIR</div>
-          <div class="slogan-main2">PİZZA, DOYURUR</div>
-          <div class="buton"><p>ACIKTIM</p></div>
+            <div>  
+              <div class="slogan-small">fırsatı kaçırma</div>
+              <div class="slogan-main">KOD ACIKTIRIR PİZZA, DOYURUR</div>
+              <div class="buton"><p>ACIKTIM</p></div>
+          </div>
         </div>
       </div>
         <div class="menu">
@@ -77,16 +79,74 @@
       </div>
       <div class="pizza-card">
         <div class="pizza-card1"><img src="public/assets/iteration-2/pictures/food-1.png" alt="">
-        <div class="terminal-text">
+        <div class="pizza-text">
           <p>Terminal Pizza</p>
+        </div>
+        <div class="price">
           <p>4.9 (200)</p>
-          <p>60₺</p>
+          <p><span>60₺</span></p>
         </div>
       </div>
-        <div class="pizza-card2"><img src="public/assets/iteration-2/pictures/food-2.png" alt=""></div>
-        <div class="pizza-card3"><img src="public/assets/iteration-2/pictures/food-3.png" alt=""></div>
+        <div class="pizza-card2"><img src="public/assets/iteration-2/pictures/food-2.png" alt="">
+          <div class="pizza-text">
+          <p>Position Absolute Acı Pizza</p>
+        </div>
+        <div class="price">
+          <p>4.9 (200)</p>
+          <p><span>60₺</span></p>
+        </div>
+      </div>
+        <div class="pizza-card3"><img src="public/assets/iteration-2/pictures/food-3.png" alt="">
+          <div class="pizza-text">
+            <p>useEffect Tavuklu Burger</p>
+          </div>
+          <div class="price">
+            <p>4.9 (200)</p>
+            <p><span>60₺</span></p>
+          </div>
+        </div>
       </div>
     </section>
+    <footer>
+      <div class="main-top">
+        <div class="left-side">
+          <img src="public/assets/iteration-2/footer/logo-footer.svg" alt="">
+          <ul>
+            <li class="text1"><img src="public/assets/iteration-2/footer/icons/icon-1.png" alt="">341 Londonderry Road, İstanbul Türkiye</li>
+            <li><img src="public/assets/iteration-2/footer/icons/icon-2.png" alt="">aciktim@teknolojikyemekler.com</li>
+            <li><img src="public/assets/iteration-2/footer/icons/icon-3.png" alt="">+90 216 123 45 67</li>
+          </ul>
+        </div>
+        <div class="mid">
+          <p>Hot Menu</p>
+          <ul>
+            <li>Terminal Pizza</li>
+            <li>5 Kişilik Hackathlon Pizza</li>
+            <li>useEffect Tavuklu Pizza</li>
+            <li>Beyaz Console Frosty</li>
+            <li>Testler Geçti Mutlu Burger</li>
+            <li>Position Absolute Acı Burger</li>
+          </ul>
+        </div>
+        <div class="right-side">
+          <div class="right-text">
+            <p>Instagram</p>
+          </div>
+          <div class="insta-img">
+            <img src="public/assets/iteration-2/footer/insta/li-0.png" alt="">
+            <img src="public/assets/iteration-2/footer/insta/li-1.png" alt="">
+            <img src="public/assets/iteration-2/footer/insta/li-2.png" alt="">
+            <img src="public/assets/iteration-2/footer/insta/li-3.png" alt="">
+            <img src="public/assets/iteration-2/footer/insta/li-4.png" alt="">
+            <img src="public/assets/iteration-2/footer/insta/li-5.png" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="main-bottom">
+        <p>© 2023 Teknolojik Yemekler.</p>
+        <i class="fa fa-twitter" style="color:White;font-size: 1vw;"></i>
+      </div>
+    </footer>
   </body>
 
 </html>
