--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
   <body>
     <header>
       <div class="banner">
-        <img src="public/assets/iteration-1/home-banner.png" alt="">
         <div class="banner-text">
           <div class="logo"><img src="public/assets/iteration-1/logo.svg" alt=""></div>
-            <div>  
-              <div class="slogan-small">fırsatı kaçırma</div>
-              <div class="slogan-main">KOD ACIKTIRIR PİZZA, DOYURUR</div>
-              <div class="buton"><p>ACIKTIM</p></div>
+          <div class="slogan">  
+            <div class="slogan-small">fırsatı kaçırma</div>
+            <div class="slogan-main">KOD ACIKTIRIR<br> PIZZA, DOYURUR</div>
           </div>
+          <div class="button">ACIKTIM</div>
         </div>
       </div>
         <div class="menu">
@@ -62,9 +61,9 @@
       </div>
     </section>
     <section class="menu-slogan">
-      <div class="slogan">
+      <div class="slogan2">
         <p><span>en çok paketlenen menüler</span></p>
-        <p>Acıktıran Kodlara Doyuran Lezzetler</p>
+        <div class="slogan2-bot">Acıktıran Kodlara Doyuran Lezzetler</div>
       </div>
     </section>
     <section class="pizza-menu">
@@ -76,7 +75,6 @@
           <a href=""><img src="public/assets/iteration-2/icons/5.svg" alt="">Fast Food</a>
           <a href=""><img src="public/assets/iteration-2/icons/6.svg" alt="">Soft Drinks</a>
         </nav>
-      </div>
       <div class="pizza-card">
         <div class="pizza-card1"><img src="public/assets/iteration-2/pictures/food-1.png" alt="">
         <div class="pizza-text">
